chore: update to more recent jdk (20/21)